# TUSKERUST

./: .env  Cargo.toml  docker-compose.yaml  todo.md
.sqlx/: query-61d4f4b908bac1fcddc4dd2c490ae9098c6e5507fb3e7ebd862ee11b31b2a00c.json
src/: handlers.rs  main.rs  models.rs  routes.rs
src/db/: mod.rs  taskboards.rs  users.rs
src/handlers/: auth.rs  mod.rs  taskboard.rs  taskboard_handler.rs  user.rs  user_handler.rs
src/models/: Errors.rs  LoginRequest.rs  RegistrationRequest.rs  Taskboard.rs  User.rs  form_models.rs  main_models.rs  mod.rs
src/other/: utils.rs
src/routes/: all_routes.rs
static/: add.html  index.html  reg.html
