[package]
name = "TUSKER"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
sqlx = {version="0.7.3", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]}
sqlx-core = "0.7.3"
actix-rt = "2.4.1"
bcrypt = "0.15.0"
log = "0.4.14"
env_logger = "0.10.1"
uuid = { version = "1.1.2", features = ["v4"] }
jsonwebtoken = "9.2.0"
